--- a/index.html
+++ b/index.html
@@ -3,19 +3,19 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Título do Site</title>
+    <title>Título do site</title>
 </head>
 <body>
     <main>
-        <h1>Título do Site</h1>
+        <h1>Cursos Grátis</h1>
     </header>
     <article>
-            <h2>Artigo 001</h2>
-            <p>texto do artigo 001.</p>
+            <h2>Curso de HTML com CSS3</h2>
+            <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Consequatur voluptatibus accusamus impedit quaerat itaque id? Quod ullam alias optio praesentium molestias tenetur ad architecto? Ullam dicta dolorum tempore suscipit officiis!</p>
         </article> 
         <article>
-            <h2>Artigo 002</h2>
-            <p>texto do artigo 002.</p>
+            <h2>Curso de JavaScript</h2>
+            <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Omnis laborum totam maxime repellendus officiis, provident vitae numquam eum eos, in eveniet, voluptatem quae exercitationem nisi dolores itaque impedit? A, architecto!.</p>
         </article>
     </main>
 </body>
