--- a/index.html
+++ b/index.html
@@ -9,14 +9,19 @@
 <body>
     <main>
         <h1>Cursos Grátis</h1>
+        <img src="Imagens/curso-em-video-cor.png" alt="Curso em Vídeo">
     </header>
     <article>
             <h2>Curso de HTML com CSS3</h2>
+            <img class="lado" src="Imagens/curso-html-css.png" alt="Curso HTML">
             <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Consequatur voluptatibus accusamus impedit quaerat itaque id? Quod ullam alias optio praesentium molestias tenetur ad architecto? Ullam dicta dolorum tempore suscipit officiis!</p>
+            <p><a href="curso-html.html">Acesse o curso de HTML5</a></p>
         </article> 
         <article>
             <h2>Curso de JavaScript</h2>
+            <img class="lado" src="Imagens/curso-javascript.png" alt="Curso javascript">
             <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Omnis laborum totam maxime repellendus officiis, provident vitae numquam eum eos, in eveniet, voluptatem quae exercitationem nisi dolores itaque impedit? A, architecto!.</p>
+            <p><a href="curso-js.html">Acesse o curso de JavaScript</a></p>
         </article>
     </main>
 </body>
